[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Intro/IntroSplashScreen.gd" type="Script" id=1]
[ext_resource path="res://UI/Intro/DClogo.jpeg" type="Texture" id=2]
[ext_resource path="res://UI/Intro/LudoverLogo.png" type="Texture" id=3]

[node name="IntroSplashScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PoolVector2Array( -44, -47, 682, -34, 688, 434, -67, 429 )

[node name="LudoverLogo" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 319, 173 )
scale = Vector2( 0.4426, 0.4426 )
texture = ExtResource( 3 )

[node name="BlendOut" type="Tween" parent="."]

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 321, 172 )
scale = Vector2( 0.425, 0.409015 )
texture = ExtResource( 2 )

[node name="LogoWaitTime" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="tween_all_completed" from="BlendOut" to="." method="_on_BlendOut_tween_all_completed"]
[connection signal="timeout" from="LogoWaitTime" to="." method="_on_LogoWaitTime_timeout"]
